Bug 295863 - Crash creating a new curve
Summary: Crash creating a new curve
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.4
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-12 19:39 UTC by Rüdiger Härtel
Modified: 2012-03-18 17:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
showcase for bug 295863 (63.98 KB, image/png)
2012-03-14 19:46 UTC, Rüdiger Härtel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rüdiger Härtel 2012-03-12 19:39:11 UTC
I open up kst and create a curve from a csv file.
Selecting (Button with Tooltip: create vector) INDEX of my csv file as x-axis works.
When trying to select (Button with tooltip edit selected vector) the data for the y-axis kst2 crashes.

It happens in file widgets(vectorselector.cpp@void VectorSelector::editVector().
Comment 1 Nicolas Brisset 2012-03-13 22:13:24 UTC
I have been trying to reproduce this and either it is a distribution-specific issue, or I simply haven't understood how to reproduce it. For one thing, I don't know which buttons you mean, in which dialog. The buttons you mention are not in the main interface, they have to be in some dialog: data wizard, edit plot, edit curve, ???

If you could be a bit more precise if your description, it'd be interesting to catch the crash. But right now I simply can't reproduce it.
And based on your explanations, I suspect you haven't found the data wizard, have you? That's the standard way to import data and plot curves in Kst.
Comment 2 Rüdiger Härtel 2012-03-14 19:46:41 UTC
Created attachment 69620 [details]
showcase for bug 295863
Comment 3 Rüdiger Härtel 2012-03-14 19:48:33 UTC
Comment on attachment 69620 [details]
showcase for bug 295863

The bug shows up when the Y-axis combobox is empty but you press button #2 (Edit selected vector).
Comment 4 Nicolas Brisset 2012-03-18 17:47:25 UTC
SVN commit 1286210 by brisset:

Don't crash when the user clicks the "Edit Vector" button and there is no selected vector.
Barth, please review. Maybe there is a nicer way to do it (like deactivating the button when there is no selection?).
But at least this seems to work well.



 M  +4 -1      vectorselector.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1286210