Don't crash when the user clicks the "Edit Vector" button and there is no selected vector. Barth, please review. Maybe there is a nicer way to do it (like deactivating the button when there is no selection?). But at least this seems to work well.

BUG: 295863


git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1286210 283d02a7-25f6-0310-bc7c-ecb5cbfe19da